lucene: maven dependencies