@@ -87,9 +87,9 @@ public class MimeTypeExtractor implements ContentTransformer {
 	);
 	
 	
-	private static final List<String> MIME_PDF_LIST = Arrays.asList(
-		"pdf"
-	);
+	private static final List<String> MIME_PDF_LIST = List.of(
+            "pdf"
+    );
 		
 	
 	/**
